--- a/danish.html
+++ b/danish.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <h1 class="title">Danish Page</h1>
-    <a href="resumé.html"></a>
+    <a href="index.html"></a>
 </body>
 <nav class="common">
-    <a href="resumé.html">Home Page</a>
+    <a href="index.html">Home Page</a>
 </nav>
 <br>
 <br>
