--- a/danish.html
+++ b/danish.html
@@ -47,7 +47,7 @@
     <br>
     <br>
     <div style="text-align: right;">
-        <img src="assets/img/__opt__aboutcom__coeus__resources__content_migration__serious_eats__seriouseats.com__recipes__images__2014__12__20141201-smorrebrod-roast-beef-vicky-wasik-2-78490d6beea745c8b858d5052f14fb0b.jpg" class="bread-image" alt="Smørrebrød" width="500" height="450">
+        <img src="assets/img/download.jpg" class="bread-image" alt="Smørrebrød" width="500" height="450">
     </div>
     <br>
     <br>
